--- a/workOut/Info.plist
+++ b/workOut/Info.plist
@@ -23,9 +23,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppleMusicUsageDescription</key>
-	<string>AppleMusicLibraryへの使用を許可しますか？</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>許可しますか？</string>
+	<string>Allow access to AppleMusicLibrary?</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
