--- a/workOut/Info.plist
+++ b/workOut/Info.plist
@@ -17,13 +17,13 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0.0</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.3</string>
+	<string>1.0.4</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppleMusicUsageDescription</key>
-	<string>AppleMusicを再生するためにアクセスを許可しますか？</string>
+	<string>AppleMusicの音楽を再生するためにライブラリへのアクセスを許可しますか？</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
